--- a/bookdown_code/book.bib
+++ b/bookdown_code/book.bib
@@ -137,7 +137,7 @@ pages = {428},
 pmid = {19312067},
 publisher = {New York Academy of Medicine},
 title = {{Isolation and Properties of Tobacco Mosaic and Other Virus Proteins}},
-url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1911256/ http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC1911256},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1911256/},
 volume = {14},
 year = {1938}
 }
@@ -184,7 +184,7 @@ mendeley-groups = {TFM/Viruses},
 month = {jul},
 publisher = {John Wiley \& Sons, Ltd},
 title = {{Capsid-Less RNA Viruses}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1002/9780470015902.a0023269 https://onlinelibrary.wiley.com/doi/abs/10.1002/9780470015902.a0023269 https://onlinelibrary.wiley.com/doi/10.1002/9780470015902.a0023269},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1002/9780470015902.a0023269},
 year = {2012}
 }
 
@@ -221,7 +221,7 @@ pages = {2870--2890},
 pmid = {22882546},
 publisher = {John Wiley \& Sons, Ltd},
 title = {{Genomic determinants of sporulation in Bacilli and Clostridia: towards the minimal set of sporulation-specific genes}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1462-2920.2012.02841.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1462-2920.2012.02841.x https://sfamjournals.onlinelibrary.wiley.com/doi/10.1111/j.1462-2920.2012.02841.x},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1462-2920.2012.02841.x},
 volume = {14},
 year = {2012}
 }
@@ -346,7 +346,7 @@ pages = {1496},
 pmid = {17785537},
 publisher = {Cold Spring Harbor Laboratory Press},
 title = {{The evolution of genome compression and genomic novelty in RNA viruses}},
-url = {/pmc/articles/PMC1987338/ /pmc/articles/PMC1987338/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1987338/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1987338/},
 volume = {17},
 year = {2007}
 }
@@ -384,7 +384,7 @@ pages = {2397},
 pmid = {18545680},
 publisher = {Public Library of Science},
 title = {{Virus Adaptation by Manipulation of Host's Gene Expression}},
-url = {/pmc/articles/PMC2398778/ /pmc/articles/PMC2398778/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2398778/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2398778/},
 volume = {3},
 year = {2008}
 }
@@ -405,7 +405,7 @@ pages = {2397},
 pmid = {18545680},
 publisher = {Public Library of Science},
 title = {{Virus Adaptation by Manipulation of Host's Gene Expression}},
-url = {/pmc/articles/PMC2398778/ /pmc/articles/PMC2398778/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2398778/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2398778/},
 volume = {3},
 year = {2008}
 }
@@ -424,7 +424,7 @@ pages = {5247},
 pmid = {21450811},
 publisher = {American Society for Microbiology (ASM)},
 title = {{What Does Virus Evolution Tell Us about Virus Origins?}},
-url = {/pmc/articles/PMC3094976/ /pmc/articles/PMC3094976/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3094976/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3094976/},
 volume = {85},
 year = {2011}
 }
@@ -711,7 +711,7 @@ number = {9},
 pmid = {31533247},
 publisher = {Multidisciplinary Digital Publishing Institute  (MDPI)},
 title = {{Metaviromics Reveals Unknown Viral Diversity in the Biting Midge Culicoides impunctatus}},
-url = {/pmc/articles/PMC6784199/ /pmc/articles/PMC6784199/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6784199/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6784199/},
 volume = {11},
 year = {2019}
 }
@@ -841,7 +841,7 @@ pages = {333},
 pmid = {23594911},
 publisher = {NIH Public Access},
 title = {{Computational solutions for omics data}},
-url = {/pmc/articles/PMC3966295/ /pmc/articles/PMC3966295/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3966295/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3966295/},
 volume = {14},
 year = {2013}
 }
@@ -881,7 +881,7 @@ pages = {57},
 pmid = {19015660},
 publisher = {NIH Public Access},
 title = {{RNA-Seq: a revolutionary tool for transcriptomics}},
-url = {/pmc/articles/PMC2949280/ /pmc/articles/PMC2949280/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2949280/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2949280/},
 volume = {10},
 year = {2009}
 }
@@ -918,7 +918,7 @@ number = {1},
 pages = {30},
 publisher = {Multidisciplinary Digital Publishing Institute},
 title = {{Third-Generation Sequencing: The Spearhead towards the Radical Transformation of Modern Genomics}},
-url = {https://www.mdpi.com/2075-1729/12/1/30/htm https://www.mdpi.com/2075-1729/12/1/30},
+url = {https://www.mdpi.com/2075-1729/12/1/30},
 volume = {12},
 year = {2021}
 }
@@ -936,7 +936,7 @@ number = {1},
 pmid = {27198714},
 publisher = {NIH Public Access},
 title = {{RNA-Seq methods for transcriptome analysis}},
-url = {/pmc/articles/PMC5717752/ /pmc/articles/PMC5717752/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5717752/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5717752/},
 volume = {8},
 year = {2017}
 }
@@ -956,7 +956,7 @@ pages = {951},
 pmid = {25870306},
 publisher = {NIH Public Access},
 title = {{RNA Sequencing and Analysis}},
-url = {/pmc/articles/PMC4863231/ /pmc/articles/PMC4863231/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4863231/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4863231/},
 volume = {2015},
 year = {2015}
 }
@@ -1122,7 +1122,7 @@ pages = {373},
 pmid = {31528630},
 publisher = {Shared Science Publishers},
 title = {{Beyond cells – The virome in the human holobiont}},
-url = {/pmc/articles/PMC6717880/ /pmc/articles/PMC6717880/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6717880/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6717880/},
 volume = {6},
 year = {2019}
 }
@@ -1141,7 +1141,7 @@ number = {JUN},
 pages = {1231},
 publisher = {Frontiers Media S.A.},
 title = {{Aquarium viromes: Viromes of human-Managed aquatic systems}},
-url = {/pmc/articles/PMC5492393/ /pmc/articles/PMC5492393/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5492393/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5492393/},
 volume = {8},
 year = {2017}
 }
@@ -1158,7 +1158,7 @@ pages = {4529},
 pmid = {12142423},
 publisher = {American Society for Microbiology (ASM)},
 title = {{The Phage Proteomic Tree: a Genome-Based Taxonomy for Phage}},
-url = {/pmc/articles/PMC135240/ /pmc/articles/PMC135240/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC135240/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC135240/},
 volume = {184},
 year = {2002}
 }
@@ -1177,7 +1177,7 @@ pages = {47},
 pmid = {19845627},
 publisher = {Wiley-Blackwell},
 title = {{On the Origin of Cells and Viruses: Primordial Virus World Scenario}},
-url = {/pmc/articles/PMC3380365/ /pmc/articles/PMC3380365/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3380365/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3380365/},
 volume = {1178},
 year = {2009}
 }
@@ -1232,7 +1232,7 @@ pages = {527--541.e5},
 pmid = {31600503},
 publisher = {Cell Host Microbe},
 title = {{The Human Gut Virome Is Highly Diverse, Stable, and Individual Specific}},
-url = {https://pubmed.ncbi.nlm.nih.gov/31600503/ https://pubmed.ncbi.nlm.nih.gov/31600503/?dopt=Abstract},
+url = {https://pubmed.ncbi.nlm.nih.gov/31600503/},
 volume = {26},
 year = {2019}
 }
@@ -1328,7 +1328,7 @@ pages = {865},
 pmid = {31533247},
 publisher = {Multidisciplinary Digital Publishing Institute},
 title = {{Metaviromics Reveals Unknown Viral Diversity in the Biting Midge Culicoides impunctatus}},
-url = {https://www.mdpi.com/1999-4915/11/9/865/htm https://www.mdpi.com/1999-4915/11/9/865},
+url = {https://www.mdpi.com/1999-4915/11/9/865},
 volume = {11},
 year = {2019}
 }
@@ -1404,7 +1404,7 @@ pages = {1332},
 pmid = {33233680},
 publisher = {Multidisciplinary Digital Publishing Institute},
 title = {{Virome Variation during Sea Star Wasting Disease Progression in Pisaster ochraceus (Asteroidea, Echinodermata)}},
-url = {https://www.mdpi.com/1999-4915/12/11/1332/htm https://www.mdpi.com/1999-4915/12/11/1332},
+url = {https://www.mdpi.com/1999-4915/12/11/1332},
 volume = {12},
 year = {2020}
 }
@@ -1612,7 +1612,7 @@ pages = {D19},
 pmid = {21062823},
 publisher = {Oxford University Press},
 title = {{The Sequence Read Archive}},
-url = {/pmc/articles/PMC3013647/ /pmc/articles/PMC3013647/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3013647/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3013647/},
 volume = {39},
 year = {2011}
 }
@@ -1763,7 +1763,7 @@ pages = {1024},
 pmid = {34072346},
 publisher = {MDPI AG},
 title = {{Chikungunya beyond the tropics: Where and when do we expect disease transmission in Europe?}},
-url = {https://www.mdpi.com/1999-4915/13/6/1024/htm https://www.mdpi.com/1999-4915/13/6/1024},
+url = {https://www.mdpi.com/1999-4915/13/6/1024},
 volume = {13},
 year = {2021}
 }
@@ -1840,7 +1840,7 @@ pages = {2114},
 pmid = {24695404},
 publisher = {Oxford University Press},
 title = {{Trimmomatic: a flexible trimmer for Illumina sequence data}},
-url = {/pmc/articles/PMC4103590/ /pmc/articles/PMC4103590/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4103590/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4103590/},
 volume = {30},
 year = {2014}
 }
@@ -1899,7 +1899,7 @@ pages = {644},
 pmid = {21572440},
 publisher = {NIH Public Access},
 title = {{Trinity: reconstructing a full-length transcriptome without a genome from RNA-Seq data}},
-url = {/pmc/articles/PMC3571712/ /pmc/articles/PMC3571712/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3571712/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3571712/},
 volume = {29},
 year = {2011}
 }
@@ -2107,7 +2107,7 @@ pages = {119},
 pmid = {20211023},
 publisher = {BioMed Central},
 title = {{Prodigal: prokaryotic gene recognition and translation initiation site identification}},
-url = {/pmc/articles/PMC2848648/ /pmc/articles/PMC2848648/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2848648/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2848648/},
 volume = {11},
 year = {2010}
 }
@@ -2249,7 +2249,7 @@ number = {2},
 pages = {139--160},
 publisher = {John Wiley \& Sons, Ltd},
 title = {{The Statistical Analysis of Compositional Data}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.2517-6161.1982.tb01195.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.2517-6161.1982.tb01195.x https://rss.onlinelibrary.wiley.com/doi/10.1111/j.2517-6161.1982.tb01195.x},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.2517-6161.1982.tb01195.x},
 volume = {44},
 year = {1982}
 }
@@ -2321,7 +2321,7 @@ number = {12},
 pages = {4185--4193},
 publisher = {John Wiley \& Sons, Ltd},
 title = {{On correlation between variables of constant sum}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1029/JZ065i012p04185 https://onlinelibrary.wiley.com/doi/abs/10.1029/JZ065i012p04185 https://agupubs.onlinelibrary.wiley.com/doi/10.1029/JZ065i012p04185},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1029/JZ065i012p04185},
 volume = {65},
 year = {1960}
 }
@@ -2523,7 +2523,7 @@ month = {nov},
 pmid = {34900762},
 publisher = {Frontiers Media S.A.},
 title = {{Alterations in the Composition of Intestinal DNA Virome in Patients With COVID-19}},
-url = {/pmc/articles/PMC8653907/ /pmc/articles/PMC8653907/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8653907/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8653907/},
 volume = {11},
 year = {2021}
 }
@@ -2576,7 +2576,7 @@ number = {1},
 pages = {32--46},
 publisher = {John Wiley \& Sons, Ltd},
 title = {{A new method for non-parametric multivariate analysis of variance}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1442-9993.2001.01070.pp.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1442-9993.2001.01070.pp.x https://onlinelibrary.wiley.com/doi/10.1111/j.1442-9993.2001.01070.pp.x},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1442-9993.2001.01070.pp.x},
 volume = {26},
 year = {2001}
 }
@@ -2595,7 +2595,7 @@ number = {4},
 pages = {557--574},
 publisher = {John Wiley \& Sons, Ltd},
 title = {{PERMANOVA, ANOSIM, and the Mantel test in the face of heterogeneous dispersions: What null hypothesis are you testing?}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1890/12-2010.1 https://onlinelibrary.wiley.com/doi/abs/10.1890/12-2010.1 https://esajournals.onlinelibrary.wiley.com/doi/10.1890/12-2010.1},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1890/12-2010.1},
 volume = {83},
 year = {2013}
 }
@@ -2614,7 +2614,7 @@ pages = {683--693},
 pmid = {16706913},
 publisher = {John Wiley \& Sons, Ltd},
 title = {{Multivariate dispersion as a measure of beta diversity}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1461-0248.2006.00926.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1461-0248.2006.00926.x https://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2006.00926.x},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1461-0248.2006.00926.x},
 volume = {9},
 year = {2006}
 }
@@ -2819,7 +2819,7 @@ pages = {452},
 pmid = {34209745},
 publisher = {MDPI AG},
 title = {{Tentacle morphological variation coincides with differential expression of toxins in sea anemones}},
-url = {/pmc/articles/PMC8310139/ /pmc/articles/PMC8310139/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8310139/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8310139/},
 volume = {13},
 year = {2021}
 }
@@ -2839,7 +2839,7 @@ pages = {3843},
 pmid = {32859685},
 publisher = {Oxford University Press},
 title = {{Differential Gene Expression Between Polymorphic Zooids of the Marine Bryozoan Bugulina stolonifera}},
-url = {/pmc/articles/PMC7534450/ /pmc/articles/PMC7534450/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7534450/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7534450/},
 volume = {10},
 year = {2020}
 }
@@ -2895,7 +2895,7 @@ mendeley-groups = {TFM/Definitive},
 number = {3},
 publisher = {PeerJ Inc.},
 title = {{Effect of method of deduplication on estimation of differential gene expression using RNA-seq}},
-url = {/pmc/articles/PMC5357343/ /pmc/articles/PMC5357343/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5357343/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5357343/},
 volume = {2017},
 year = {2017}
 }
@@ -3000,7 +3000,7 @@ pages = {283--294},
 pmid = {34224654},
 publisher = {John Wiley \& Sons, Ltd},
 title = {{Hidden diversity of Ctenophora revealed by new mitochondrial COI primers and sequences}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1111/1755-0998.13459 https://onlinelibrary.wiley.com/doi/abs/10.1111/1755-0998.13459 https://onlinelibrary.wiley.com/doi/10.1111/1755-0998.13459},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1111/1755-0998.13459},
 volume = {22},
 year = {2022}
 }
@@ -3117,7 +3117,7 @@ pages = {645--658},
 pmid = {21854988},
 publisher = {Elsevier B.V.},
 title = {{The human mitochondrial transcriptome}},
-url = {http://www.cell.com/article/S0092867411007677/fulltext http://www.cell.com/article/S0092867411007677/abstract https://www.cell.com/cell/abstract/S0092-8674(11)00767-7},
+url = {http://www.cell.com/article/S0092867411007677/fulltext},
 volume = {146},
 year = {2011}
 }
@@ -3192,7 +3192,7 @@ pages = {1002364},
 pmid = {22319434},
 publisher = {Public Library of Science},
 title = {{Viral Proteins Acquired from a Host Converge to Simplified Domain Architectures}},
-url = {/pmc/articles/PMC3271019/ /pmc/articles/PMC3271019/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3271019/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3271019/},
 volume = {8},
 year = {2012}
 }
@@ -3211,7 +3211,7 @@ number = {9},
 pmid = {30231047},
 publisher = {Public Library of Science},
 title = {{Ultrastructure of Meelsvirus: A nuclear virus of arrow worms (phylum Chaetognatha) producing giant “tailed” virions}},
-url = {/pmc/articles/PMC6145532/ /pmc/articles/PMC6145532/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6145532/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6145532/},
 volume = {13},
 year = {2018}
 }
@@ -3229,7 +3229,7 @@ number = {20},
 pmid = {32759315},
 publisher = {American Society for Microbiology (ASM)},
 title = {{Partitiviruses Infecting Drosophila melanogaster and Aedes aegypti Exhibit Efficient Biparental Vertical Transmission}},
-url = {/pmc/articles/PMC7527066/ /pmc/articles/PMC7527066/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7527066/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7527066/},
 volume = {94},
 year = {2020}
 }
@@ -3248,7 +3248,7 @@ number = {45},
 pages = {12803--12808},
 publisher = {National Academy of Sciences},
 title = {{Fungal DNA virus infects a mycophagous insect and utilizes it as a transmission vector}},
-url = {www.pnas.org/cgi/doi/10.1073/pnas.1608013113},
+url = {https://www.pnas.org/cgi/doi/10.1073/pnas.1608013113},
 volume = {113},
 year = {2016}
 }
@@ -3344,7 +3344,7 @@ pages = {2119--2138},
 pmid = {32188733},
 publisher = {American Society for Microbiology (ASM)},
 title = {{Comparative Analysis of RNA Virome Composition in Rabbits and Associated Ectoparasites}},
-url = {/pmc/articles/PMC7269439/ /pmc/articles/PMC7269439/?report=abstract https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7269439/},
+url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7269439/},
 volume = {94},
 year = {2020}
 }
@@ -3380,7 +3380,7 @@ number = {1},
 pages = {57--79},
 publisher = {John Wiley \& Sons, Ltd},
 title = {{Some solutions to the multivariate Behrens–Fisher problem for dissimilarity-based analyses}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1111/anzs.12176 https://onlinelibrary.wiley.com/doi/abs/10.1111/anzs.12176 https://onlinelibrary.wiley.com/doi/10.1111/anzs.12176},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1111/anzs.12176},
 volume = {59},
 year = {2017}
 }
